<resources>
    <string name="app_name">Fiddle</string>
    <string name="title_activity_fid_creation">FidCreationActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="task">Task</string>
    <string name="what_would_you_like_to_fiddle_with_today">What would you like to fiddle with today?</string>
    <string name="swipe_your_choice">Swipe your choice</string>
    <string name="swipe_right_home">Go to\n> my fids</string>
    <string name="swipe_left_home"><![CDATA[  Create   \nnew fid <]]></string>
    <string name="pop_up">pop up</string>
    <string name="nice">nice.</string>
    <string name="duration">Duration</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="background_image">background image</string>
    <string name="enter_description_here">Enter description here…</string>
    <string name="my_new_fid">My new fid…</string>
    <string name="how_much_time_would_you_attribute_to_your_new_fid">How much time would you attribute to your new fid?</string>
    <string name="what_category_would_you_attribute_to_your_new_fid">What category would you attribute to your new fid?</string>
    <string name="what_priority_would_you_attribute_to_your_new_fid">What priority would you attribute to your new fid?</string>
    <string name="navigation_button">navigation button</string>
    <string name="duration_frame">number picker frame</string>
    <string name="option_button">option button</string>
    <string name="TestText">Lorem ipsum</string>
    <string name="ExampleDuration">5</string>
</resources>