<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/Theme.Fiddle">

    <ImageView
        android:id="@+id/flower_background"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flower_green"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/circle_background"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="310dp"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/three_circle_pink"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/logo_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green"
        android:contentDescription="@string/background_image" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/simpler_pro_regular"
        android:gravity="center"
        android:text="@string/what_would_you_like_to_fiddle_with_today"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/circle_background"
        app:layout_constraintStart_toEndOf="@+id/flower_background"
        app:layout_constraintTop_toBottomOf="@+id/logo_background" />

    <TextView
        android:id="@+id/subtite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/simpler_pro_light"
        android:gravity="center"
        android:text="@string/swipe_your_choice"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <TextView
        android:id="@+id/swipe_right_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/simpler_pro_regular"
        android:gravity="center"
        android:text="@string/swipe_right_home"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flower_background" />

    <TextView
        android:id="@+id/swipe_left_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/simpler_pro_regular"
        android:gravity="center"
        android:text="@string/swipe_left_home"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/swipe_right_label" />

</androidx.constraintlayout.widget.ConstraintLayout>