<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fid_creation.FidCreationPriorityFragment">

    <ImageButton
        android:id="@+id/Prev"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:onClick="prevStep"
        android:scaleType="fitXY"
        android:src="@drawable/left_button_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/navigation_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/LeftButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:background="@android:color/transparent"
        android:onClick="setPriority1"
        android:scaleType="fitXY"
        android:src="@drawable/circle_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/option_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/MidButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:onClick="setPriority2"
        android:src="@drawable/two_circles_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightButton"
        app:layout_constraintStart_toEndOf="@+id/LeftButton"
        android:contentDescription="@string/option_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/RightButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="80dp"
        android:background="@android:color/transparent"
        android:onClick="setPriority3"
        android:scaleType="fitXY"
        android:src="@drawable/three_circle_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/option_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/simpler_pro_bold"
        android:gravity="center"
        android:text="@string/what_priority_would_you_attribute_to_your_new_fid"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>